--- a/ArcGIS_Sample/Base.lproj/Main.storyboard
+++ b/ArcGIS_Sample/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ArcGIS_Sample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,39 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kuZ-i2-SO1" customClass="AGSMapView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EsriLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Hl9-8s-V75">
+                                <rect key="frame" x="8" y="560" width="56" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="56" id="cTX-gd-PlC"/>
+                                    <constraint firstAttribute="height" constant="32" id="mDK-YL-REl"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Hl9-8s-V75" secondAttribute="bottom" constant="8" id="0i2-ym-HkE"/>
+                            <constraint firstItem="kuZ-i2-SO1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WJe-Qp-Anq"/>
+                            <constraint firstItem="kuZ-i2-SO1" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="h3U-jj-rjv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kuZ-i2-SO1" secondAttribute="bottom" id="l0F-8z-PIO"/>
+                            <constraint firstItem="Hl9-8s-V75" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="s0f-lN-kVy"/>
+                            <constraint firstAttribute="trailing" secondItem="kuZ-i2-SO1" secondAttribute="trailing" id="twt-YR-Gl5"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="kuZ-i2-SO1" id="bAw-In-aVm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="340" y="389"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="EsriLogo" width="56" height="32"/>
+    </resources>
 </document>
